--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -100,8 +100,7 @@
 
         {% if courtAppearance.offences.length > 0 %}
             <div class="govuk-button-group govuk-!-margin-top-8">
-                <form method="post"
-                      action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-offence-answers">
+                <form method="post">
                     <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                     {{ govukRadios({
                         id: "finishedAddingOffences",
@@ -131,12 +130,23 @@
                         ]
                     }) }}
 
-                    {{ govukButton({
-                        text: "Continue",
-                        attributes: {
-                            "data-qa": "finishAddingButton"
-                        }
-                    }) }}
+                    <div class="govuk-button-group">
+                        <button type="submit"
+                                class="govuk-button"
+                                data-module="govuk-button"
+                                data-qa="continue-button"
+                                formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-offence-answers">
+                            Continue
+                        </button>
+
+                        <button type="submit"
+                                class="govuk-button govuk-button--secondary"
+                                data-module="govuk-button"
+                                data-qa="save-draft-button"
+                                formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
+                            Save as draft
+                        </button>
+                    </div>
                 </form>
             </div>
         {% endif %}
