--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -134,7 +134,7 @@
                         <button type="submit"
                                 class="govuk-button"
                                 data-module="govuk-button"
-                                data-qa="continue-button"
+                                data-qa="finishAddingButton"
                                 formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-offence-answers">
                             Continue
                         </button>
