RASS-554 Add draft button to check-next-hearing-answers

--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -76,7 +76,7 @@
                             data-module="govuk-button"
                             data-qa="continue-button"
                             formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-next-hearing-answers">
-                        Continue
+                        Accept and continue
                     </button>
 
                     <button type="submit"
