--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -1,6 +1,7 @@
 {% extends "../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
+{% from "hmpps/components/court-cases-release-dates/things-to-do/macro.njk" import thingsToDo %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
@@ -10,6 +11,7 @@
 
 {% block content %}
     <h1 class="govuk-heading-l">Court cases</h1>
+    {{ thingsToDo(serviceDefinitions, 'courtCases') }}
     <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-two-thirds">
