--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -151,7 +151,7 @@
                             offenceCard({
                                 offenceCode: offence.offenceCode,
                                 offenceName: offenceMap[offence.offenceCode],
-                                offenceStartDate: offence.offenceStartDate | formatDate,
+                                offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
                                 offenceEndDate: offence.offenceEndDate | formatDate,
                                 outcome: offenceOutcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
                                 countNumber: offence.sentence.countNumber,
