RASS-669 handle unsupported sentence types

--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -236,7 +236,7 @@
                         licencePeriodLength: offence.sentence.licencePeriodLength,
                         sentenceServeType: offence.sentence.sentenceServeType,
                         consecutiveTo: offence.sentence.consecutiveTo,
-                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId],
+                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
                         fineAmount: offence.sentence.fineAmount,
                         actions: {
                             items: [
