RASS-674 fallback text for no overall conviction date

--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -49,7 +49,7 @@
                             text: "Conviction date"
                         },
                             value: {
-                            text: appearance.overallConvictionDate | formatDate
+                            text: appearance.overallConvictionDate | formatDate if appearance.overallConvictionDate else 'Not entered'
                         },
                             actions: {
                             items: [
