RASS-712 prevent double click on save/ updates

--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -260,6 +260,7 @@
                 <div class="govuk-button-group">
                     {{ govukButton({
                         text: "Confirm changes",
+                        preventDoubleClick: true,
                         attributes: {  'data-qa': 'confirm-button' }
                     }) }}
 
